[package]
name = "mwlint"
version = "0.1.0"
authors = ["Valentin Roland <valentin@vroland.de>"]

[[bin]]
name = "mwlint"
path = "src/mwlint.rs"
doc = false

[features]
web = []

[dependencies]
mediawiki_parser = "0.4"
mwparser_utils = { git = "https://github.com/vroland/mediawiki-parser-utils.git" }
mfnf_template_spec = { git = "https://github.com/vroland/mfnf-template-spec.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
colored = "1.6"
structopt = "0.2"

